--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
       <html lang="pl-PL">
       <html>
                <head>
-<h1> Lixkote </h1><br>
-<h2> Lixkote </h2><br>
-<h3> Lixkote </h3><br>
-<h4> Lixkote </h4><br>
-<h5> Lixkote </h5><br>
-<h6> Lixkote </h6><br>
+<h1> Imie </h1><br>
+<h2> Imie </h2><br>
+<h3> Imie </h3><br>
+<h4> Imie </h4><br>
+<h5> Imie </h5><br>
+<h6> Imie </h6><br>
                </head>
                 <body>
-<p align="right"> <font color="blue" size="1" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="2" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="3" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="4" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="5" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="6" face="Arial"> Lixkote </font> </p> <br>
-<p align="right"> <font color="blue" size="7" face="Arial"> Lixkote </font> </p> <br>
+<p align="right"> <font color="blue" size="1" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="2" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="3" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="4" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="5" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="6" face="Arial"> Imie </font> </p> <br>
+<p align="right"> <font color="blue" size="7" face="Arial"> Imie </font> </p> <br>
                 </body>
          </html>
