--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
-      <html lang="pl-PL">
-      <html>
-               <head>
-<h1> Imie </h1><br>
-<h2> Imie </h2><br>
-<h3> Imie </h3><br>
-<h4> Imie </h4><br>
-<h5> Imie </h5><br>
-<h6> Imie </h6><br>
-               </head>
-                <body>
-<p align="right"> <font color="blue" size="1" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="2" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="3" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="4" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="5" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="6" face="Arial"> Imie </font> </p> <br>
-<p align="right"> <font color="blue" size="7" face="Arial"> Imie </font> </p> <br>
-                </body>
-         </html>
+<html lang="pl-PL"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+			<meta charset="utf-8">
+			<title>Kamil Broz</title>
+		</head>
+		<body>
+		<p align="right"><font color="green" size="7" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="6" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="5" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="4" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="3" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="2" face="Arial">Kamil</font></p><br>
+		<p align="right"><font color="green" size="1" face="Arial">Kamil</font></p><br>
+		
+		<h6>Broz</h6><br>
+		<h5>Broz</h5><br>
+		<h4>Broz</h4><br>
+		<h3>Broz</h3><br>
+		<h2>Broz</h2><br>
+		<h1>Broz</h1><br>
+		
+		<font color="red" size="6" face="Times New Roman">:) radość, zawodolenie</font><br>
+		<font color="red" size="4" face="Arial">:( zmartwienie, smutek</font><br>
+		<font color="red" size="5" face="Bell MT">:O zdziwienie</font><br>
+		<font color="red" size="3" face="Courier New">:| niezdecydowanie, brak emocji</font><br>
+		<font color="red" size="8" face="Comic Sans MS">O_O mocne zdziwienie, zdziwienie</font><br>
+		<font color="red" size="9" face="Verdana">:/ grymas, niezadowolenie</font><br><br>
+
+		<p align="left"><font color="black" size="2" face="Times New Roman"><b>Adres: 80-188,</b></font><font color="black" size="2" face="Times New Roman"><i>Gdańsk,</i></font><font color="black" size="2" face="Times New Roman"><u>Ciekawa,</u></font><font color="black" size="2" face="Times New Roman"><strike>120/23</strike></font></p><br><br>
+		<p align="center"><font color="yellow" size="6" face="Courier New">Ulubiony aktor: Janusz Rewiński</font></p><br><br>
+		<p align="center"><font color="gray" size="4" face="Arial">Ulubiony zespół muzyczny:</font><font color="red" size="4" face="Arial"> Varius Manx</font></p><br><br>
+		<p align="center"><font color="green" size="3" face="Verdana">Data urodzenia: 14 napewno_nie_stycznia 2007.</font></p><br>
+		
+		<h4>H<sub>2</sub>SO<sub>4</sub></h4><br>
+		<h4>x*x=x<sup>2</sup></h4><br>
+			
+		
+	
+</body></html>
