--- a/index.html
+++ b/index.html
@@ -35,6 +35,31 @@
 		<h4>H<sub>2</sub>SO<sub>4</sub></h4><br>
 		<h4>x*x=x<sup>2</sup></h4><br>
 			
+		<h1 align="left">Dowcipy o informatyku</h1>
+		<fieldset>
+			<legend> Ślub informatyka </legend>
+			Co mówi ksiądz na ślubie informatyka?<br>
+			- pobieranie zakończone.<br>	
+		</fieldset>
+
+		<h1 align="center">Żart o Jasiu</h1>
+		<fieldset>
+			<legend> Komisariat </legend>
+			Jasiu przychodzi ze szkoły do domu i mówi:<br>
+			- Cześć mamo<br>
+			- Jasiu jak się czujesz w szkole?<br>
+			- Jak na komisariacie! Ciągle mnie pytają a ja o niczym nie wiem.<br>
+		</fieldset>
+
+		<h1 align="center">Żart o babie</h1>
+		<fieldset>
+			<legend> U lekarza </legend>
+			Przychodzi baba do lekarza.<br> 
+			- Panie doktorze, wie pan co, jestem jakoś dziwnie chora. Jakbym się 
+położyła to bym leżała,leżała. Jakbym szła to bym szła szła...<br> 
+			- A jakbym cię w dupę kopnął to byś leciała, leciała i leciała.<br>
+		</fieldset>
+			
 		
 	
 </body></html>
