Dodanie obrazków oraz wypunktowania -> Zadanie 4 i 5
Dodanie obrazków oraz wypunktowania -> Zadanie 4 i 5

--- a/index.html
+++ b/index.html
@@ -38,27 +38,63 @@
 		<h1 align="left">Dowcipy o informatyku</h1>
 		<fieldset>
 			<legend> Ślub informatyka </legend>
+									<IMG SRC="pobieranie.gif" ALIGN=right BORDER=13 WIDTH=103 
+HEIGHT=114 ALT=„grafika3-Brozek”>
 			Co mówi ksiądz na ślubie informatyka?<br>
 			- pobieranie zakończone.<br>	
+									<IMG SRC="pobieranie2.gif" ALIGN=left BORDER=15 WIDTH=105 
+HEIGHT=109 ALT=„grafika4-Brozek”>
 		</fieldset>
 
 		<h1 align="center">Żart o Jasiu</h1>
 		<fieldset>
 			<legend> Komisariat </legend>
+						<IMG SRC="nerd.gif" ALIGN=left BORDER=19 WIDTH=109 
+HEIGHT=105 ALT=„grafika2-Brozek”>
 			Jasiu przychodzi ze szkoły do domu i mówi:<br>
 			- Cześć mamo<br>
 			- Jasiu jak się czujesz w szkole?<br>
 			- Jak na komisariacie! Ciągle mnie pytają a ja o niczym nie wiem.<br>
+			<IMG SRC="komisariat.gif" ALIGN=right BORDER=24 WIDTH=114 
+HEIGHT=103 ALT=„grafika1-Brozek”>
 		</fieldset>
 
 		<h1 align="center">Żart o babie</h1>
 		<fieldset>
 			<legend> U lekarza </legend>
+												<IMG SRC="doktor.gif" ALIGN=right BORDER=15 WIDTH=105 
+HEIGHT=105 ALT=„grafika5-Brozek”>
 			Przychodzi baba do lekarza.<br> 
 			- Panie doktorze, wie pan co, jestem jakoś dziwnie chora. Jakbym się 
 położyła to bym leżała,leżała. Jakbym szła to bym szła szła...<br> 
 			- A jakbym cię w dupę kopnął to byś leciała, leciała i leciała.<br>
 		</fieldset>
+		<ol>
+			<li>Peryferia komputerowe
+				<ol type="A">
+					<li>Mysz</li>
+					<li>Klawiatura</li>
+					<li>Monitor</li>
+				</ol>
+			</li>
+			<li>Rodzaje podświetlenia ekranu komputerowego
+				<ol type="A">
+			<li>Monitor LCD
+				<ul type="a">
+					<li>LED</li>
+					<li>Świetlówkowy</li>
+				</ul>
+			</li>
+		</ol>
+					<li>Najpopularniejsze wersje systemu Windows
+				<ol type="1">
+					<li>Windows XP</li>
+					<li>Windows 7</li>
+					<li>Windows 10</li>
+				</ol>
+			</li>
+  </li>
+</ol>
 			
 		
 	
