--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+			    <h2 id="poczatek">Poczatek Tekstu</h2>
+			<a href="poczta_Broz.html">Poczta</A><br>
+			<a href="instrukcja.pdf">Pobierz Plik PDF</A><br>
+			<a href="#srodek">Środek Tekstu</A><br>
+			<a href="#koniec">Koniec Tekstu</A><br>
+			<a href="tabela_Broz.html">Tabela</A><br>
+			<a href="formularz_Broz.html">Formularz</A><br>
 			<meta charset="utf-8">
 			<title>Kamil Broz</title>
 		</head>
@@ -34,7 +41,17 @@
 		
 		<h4>H<sub>2</sub>SO<sub>4</sub></h4><br>
 		<h4>x*x=x<sup>2</sup></h4><br>
+		
+		
+			<a href="poczta_Broz.html">Poczta</A><br>
+			<a href="instrukcja.pdf">Pobierz Plik PDF</A><br>
+			<a href="#srodek">Środek Tekstu</A><br>
+			<a href="#koniec">Koniec Tekstu</A><br>
+			<a href="tabela_Broz.html">Tabela</A><br>
+			<a href="formularz_Broz.html">Formularz</A><br>
 			
+			
+						    <h2 id="srodek">Środek Tekstu</h2>
 		<h1 align="left">Dowcipy o informatyku</h1>
 		<fieldset>
 			<legend> Ślub informatyka </legend>
@@ -97,5 +114,11 @@ położyła to bym leżała,leżała. Jakbym szła to bym szła szła...<br>
 </ol>
 			
 		
-	
+			<a href="poczta_Broz.html">Poczta</A><br>
+			<a href="instrukcja.pdf">Pobierz Plik PDF</A><br>
+			<a href="#srodek">Środek Tekstu</A><br>
+			<a href="#koniec">Koniec Tekstu</A><br>
+			<a href="tabela_Broz.html">Tabela</A><br>
+			<a href="formularz_Broz.html">Formularz</A><br>
+			    <h2 id="koniec">Koniec Tekstu</h2>
 </body></html>
