--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
 			<a href="#koniec">Koniec Tekstu</A><br>
 			<a href="tabela_Broz.html">Tabela</A><br>
 			<a href="formularz_Broz.html">Formularz</A><br>
+			<a href="blad_brozek.jpg">Walidacja z błędami</A><br>
+			<a href="poprawa_brozek.jpg">Walidacja z usunięciem jak najwięcej błędów</A><br>
 			<meta charset="utf-8">
 			<title>Kamil Broz</title>
 		</head>
 		<body>
+	<div>
+        <h2>Walidator HTML</h2>
+        <p>To jest link do <a href="https://validator.w3.org/" target="_blank">walidatora HTML</a>, który pozwala sprawdzić
+            poprawność strony zgodnie z standardami W3C.</p>
+    </div>
+
+    <div>
+        <h2>Opis walidatora HTML</h2>
+        <p>Walidator HTML to narzędzie dostarczane przez W3C, które pomaga sprawdzać, czy kod HTML jest zgodny z
+            ustalonymi standardami. Pozwala to na identyfikację i poprawienie ewentualnych błędów w strukturze dokumentu HTML,
+            co przyczynia się do lepszej dostępności i zgodności z różnymi przeglądarkami pracującymi w standardzie HTML5.</p>
+    </div>
 		<p align="right"><font color="green" size="7" face="Arial">Kamil</font></p><br>
 		<p align="right"><font color="green" size="6" face="Arial">Kamil</font></p><br>
 		<p align="right"><font color="green" size="5" face="Arial">Kamil</font></p><br>
@@ -49,6 +63,8 @@
 			<a href="#koniec">Koniec Tekstu</A><br>
 			<a href="tabela_Broz.html">Tabela</A><br>
 			<a href="formularz_Broz.html">Formularz</A><br>
+						<a href="blad_brozek.jpg">Walidacja z błędami</A><br>
+			<a href="poprawa_brozek.jpg">Walidacja z usunięciem jak najwięcej błędów</A><br>
 			
 			
 						    <h2 id="srodek">Środek Tekstu</h2>
@@ -120,5 +136,9 @@ położyła to bym leżała,leżała. Jakbym szła to bym szła szła...<br>
 			<a href="#koniec">Koniec Tekstu</A><br>
 			<a href="tabela_Broz.html">Tabela</A><br>
 			<a href="formularz_Broz.html">Formularz</A><br>
+						<a href="blad_brozek.jpg">Walidacja z błędami</A><br>
+			<a href="poprawa_brozek.jpg">Walidacja z usunięciem jak najwięcej błędów</A><br>
 			    <h2 id="koniec">Koniec Tekstu</h2>
+										<IMG SRC="html5logo.png" ALIGN=center BORDER=4 WIDTH=109 
+HEIGHT=105 ALT=„grafika2-Brozek”>
 </body></html>
